--- a/lesson1_serial_helloworld/sample_code/test.ioc
+++ b/lesson1_serial_helloworld/sample_code/test.ioc
@@ -11,9 +11,9 @@ Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PF1-OSC_OUT
-Mcu.Pin2=PA2
-Mcu.Pin3=PA3
-Mcu.Pin4=PA4
+Mcu.Pin2=PA4
+Mcu.Pin3=PA9
+Mcu.Pin4=PA10
 Mcu.Pin5=PA13
 Mcu.Pin6=PA14
 Mcu.Pin7=VP_SYS_VS_Systick
@@ -28,19 +28,21 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
+PA10.Locked=true
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_SWCLK
-PA2.Mode=Asynchronous
-PA2.Signal=USART1_TX
-PA3.Mode=Asynchronous
-PA3.Signal=USART1_RX
 PA4.GPIOParameters=PinState,GPIO_Label
 PA4.GPIO_Label=USER_LED
 PA4.Locked=true
 PA4.PinState=GPIO_PIN_SET
 PA4.Signal=GPIO_Output
+PA9.Locked=true
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PCC.Checker=false
 PCC.Line=STM32F0x0 Value Line
 PCC.MCU=STM32F030F4Px
