--- a/lesson1_serial_helloworld/sample_code/test.ioc
+++ b/lesson1_serial_helloworld/sample_code/test.ioc
@@ -21,8 +21,8 @@ Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
-MxCube.Version=4.25.1
-MxDb.Version=DB.4.0.251
+MxCube.Version=4.27.0
+MxDb.Version=DB.4.0.270
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -73,6 +73,7 @@ ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Src
+ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=test.ioc
