--- a/lesson2_external_interrupt/homework_answer/test.ioc
+++ b/lesson2_external_interrupt/homework_answer/test.ioc
@@ -23,8 +23,8 @@ Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
-MxCube.Version=4.24.0
-MxDb.Version=DB.4.0.240
+MxCube.Version=4.27.0
+MxDb.Version=DB.4.0.270
 NVIC.EXTI0_1_IRQn=true\:1\:0\:true\:false\:true\:true
 NVIC.EXTI2_3_IRQn=true\:1\:0\:true\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -77,7 +77,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=C\:/Users/Allen/STM32Cube/Repository/STM32Cube_FW_F0_V1.9.0
+ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F030F4Px
@@ -88,6 +88,8 @@ ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
+ProjectManager.MainLocation=Src
+ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=test.ioc
