--- a/lesson6_rtos/sample_code_external_files/test.ioc
+++ b/lesson6_rtos/sample_code_external_files/test.ioc
@@ -27,8 +27,8 @@ Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
-MxCube.Version=4.25.1
-MxDb.Version=DB.4.0.251
+MxCube.Version=4.27.0
+MxDb.Version=DB.4.0.270
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:3\:0\:false\:false\:false\:true\:false
@@ -82,6 +82,7 @@ ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Src
+ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=test.ioc
